web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdeploy
  labels:
    app: webstoredep
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  minReadySeconds: 5
  replicas: 1
  selector:
    matchLabels:
      app: libraryweb
  template:
    metadata:
      name: webpod
      labels:
        app: libraryweb
    spec:
      containers:
        - name: web
          image:  shaikkhajaibrahim/libwebstore:1.0
          resources:
            requests:
               memory: 24M
               cpu: 100m
            limits:
               memory: 128M
               cpu: 500m
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: libservice
spec:
  selector:
     app: libraryweb
  type: LoadBalancer  
  ports:
  - port: 80
    targetPort: 3000
