ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: svcuser
                port:
                  number: 8000
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: booksrc
                port:
                  number: 8000
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: libservice
                port:
                  number: 3000
